ReSharper.FSharp/test/data/parsing/errors/Type member - Identifier 03.fs
type T() =
    do ()

    x

    member this.P = ()
